--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,41 @@
+.App {
+  min-height: 60vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 .App > h1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.container {
+  margin-top: 5vh;
+  display: flex;
+  width : 60vw;
+  justify-content: center;
+  align-items: center;
+}
+
+.row {
+  width: 100%;
+}
+
+.col {
+  width: 100%;
+}
+
+.search-btn {
+  padding-top: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.contact-item {
   display: flex;
   justify-content: center;
   align-items: center;
