--- a/src/App.css
+++ b/src/App.css
@@ -35,12 +35,28 @@
   align-items: center;
 }
 
-.contact-item {
+.contact-item{
+  width: 100%;
+  padding: 0.5rem 0 0.5rem 0;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .items {
+  width: 100%;
   display: flex;
+  height: 5rem;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.edit-button {
+  height: 2.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-end;
+  align-content: flex-end;
 }
